--- a/resume.tex
+++ b/resume.tex
@@ -7,27 +7,26 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{Bin Yuan}
+\name{Chang Zhao}
 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
+  \email{zhaochang206@gmail.com} \textperiodcentered\ 
+  \phone{(+86) 130-0382-8195} \textperiodcentered\ 
+  \linkedin[Chang Zhao]{https://www.linkedin.com/in/chang-zhao-827166141/}
+  \github[ZCplayground]{https://github.com/ZCplayground}}
 
 \section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
-\textit{Master student} in Electronics Engineering (EE), expected March 2016
-\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
-\textit{B.S.} in Electronics Engineering (EE)
+\datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{2015 -- 2019}
+\textit{B.S.} in Computer Science (CS), expected June 2019
 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
-\role{Summer Intern}{Manager: xxx}
-Brief introduction: xxx.
+\datedsubsection{\textbf{Microsoft} Beijing, China}{Jun. 2019 -- Sept. 2019}
+\role{Software Development Intern}
+Microsoft C+AI Group
 \begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
+  \item Design a command line program, Layer 7 Packet Tracer, to locate the IP address of a device that will filter packets at specific application layers.
+  \item Investigate the Protractor, Jasmine, and Selenium tools. Build a framework for the end-to-end front-end testing of the Privacy Review Manager project.
+  \item Design a more flexible, configurable, and more versatile front-end progress bar component.
 \end{itemize}
 
 \datedsubsection{\textbf{xxx Projects}}{Jan. 2015 -- Present}
@@ -49,22 +48,26 @@ An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 \end{itemize}
 
 % Reference Test
-%\datedsubsection{\textbf{Paper Title\cite{zaharia2012resilient}}}{May. 2015}
-%An xxx optimized for xxx\cite{verma2015large}
-%\begin{itemize}
-%  \item main contribution
-%\end{itemize}
+\section{\faPapers\ Publications}
+\datedsubsection{\textbf{Paper Title\cite{zaharia2012resilient}}}{May. 2015}
+An xxx optimized for xxx\cite{verma2015large}
+\begin{itemize}
+  \item main contribution
+\end{itemize}
 
 \section{\faCogs\ Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item Programming Languages: C == Python > C++ > Java
+  \item Programming Languages: C, Python, C++, Javascript, PHP
   \item Platform: Linux
   \item Development: Web, xxx
 \end{itemize}
 
 \section{\faHeartO\ Honors and Awards}
-\datedline{\textit{\nth{1} Prize}, Award on xxx }{Jun. 2013}
-\datedline{Other awards}{2015}
+\datedline{Third-Class Prize of 2016 National English Competition for College Students}{Oct. 2016}
+\datedline{The Second-Class Fuzhou University Scholarship}{Mar. 2017}
+\datedline{Second-Class Prize of The 4th National University SDN Application Innovation Development Competition}{Aug. 2017}
+\datedline{Second-Class Prize of China Collegiate Computing Contest, Network Technology Challenge}{Aug. 2018}
+\datedline{National College Students Innovation and Entrepreneurship Project "Development of Network Stream Classification Based on DPDK", excellent grades}{Jun. 2019}
 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
