--- a/resume.tex
+++ b/resume.tex
@@ -48,7 +48,7 @@ An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 \end{itemize}
 
 % Reference Test
-\section{\faPapers\ Publications}
+\section{Publications}
 \datedsubsection{\textbf{Paper Title\cite{zaharia2012resilient}}}{May. 2015}
 An xxx optimized for xxx\cite{verma2015large}
 \begin{itemize}
