--- a/resume.tex
+++ b/resume.tex
@@ -12,68 +12,90 @@
 \basicInfo{
   \email{zhaochang206@gmail.com} \textperiodcentered\ 
   \phone{(+86) 130-0382-8195} \textperiodcentered\ 
-  \linkedin[Chang Zhao]{https://www.linkedin.com/in/chang-zhao-827166141/}
+  \linkedin[Chang Zhao]{https://www.linkedin.com/in/chang-zhao-chaz/}
   \github[ZCplayground]{https://github.com/ZCplayground}}
 
-\section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{2015 -- 2019}
-\textit{B.S.} in Computer Science (CS), expected June 2019
-
-\section{\faUsers\ Experience}
-\datedsubsection{\textbf{Microsoft} Beijing, China}{Jun. 2019 -- Sept. 2019}
-\role{Software Development Intern}
-Microsoft C+AI Group
+\section{Education}
+\datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sep. 2015 - Jun. 2019}
 \begin{itemize}
-  \item Design a command line program, Layer 7 Packet Tracer, to locate the IP address of a device that will filter packets at specific application layers.
-  \item Investigate the Protractor, Jasmine, and Selenium tools. Build a framework for the end-to-end front-end testing of the Privacy Review Manager project.
-  \item Design a more flexible, configurable, and more versatile front-end progress bar component.
+  \textit{Bachelor of Engineer} in Computer Science (CS)
+  \item GPA : 3.01 / 5 (81.05 / 100) Major GPA: 3.59 / 5 (85.69 / 100)
 \end{itemize}
 
-\datedsubsection{\textbf{xxx Projects}}{Jan. 2015 -- Present}
-\role{C, Python, Django, Linux}{Individual Projects, collaborated with xxx}
-Brief introduction: xxx
+\datedsubsection{\textbf{University of Washington (UW)}, Tacoma, WA, USA}{Sept. 2020}
 \begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
+  \item \textit{Master Student}. Anticipated Enrollment Date: Sept. 2020.
+  \item Major: Computer Science & Systems
 \end{itemize}
 
-\datedsubsection{\textbf{\LaTeX\ résumé template}}{May. 2015 -- Present}
-\role{\LaTeX, Maintainer}{Individual Projects}
-An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
+
+\section{Experience}
+\datedsubsection{\textbf{Software Development Intern at Microsoft Beijing, Cloud+AI Group}}{Jun. 2019 - Sept. 2019}
 \begin{itemize}
-  \item Easy to be further customized or extended
-  \item Full support for unicode characters (e.g. CJK) with \XeLaTeX\
-  \item FontAwesome 4.5.0 support
+  \item Designed a command line program, Layer 7 Packet Tracer, to locate the IP address of a device that will filter packets at specific application layers.
+  \item Investigated the Protractor, Jasmine, and Selenium tools. Build a framework for the end-to-end front-end testing of the Privacy Review Manager project.
+  \item Designed a more flexible, configurable, and more versatile front-end progress bar component.
 \end{itemize}
 
-% Reference Test
+\datedsubsection{\textbf{FZU-SDN Lab Member}}{Mar. 2017 - Nov. 2019}
+\begin{itemize}
+  \item As a member of the FZU-SDN Lab (Software-defined Network) under supervision of Prof. Dong Zhang. My research
+  interests include Software-defined Network, network security, programmable data plane and packets processing
+  optimization techniques (major in data plane development kit, DPDK).
+\end{itemize}
+
+\datedsubsection{\textbf{Teaching Assistant - C++ Object-oriented Programming Course}}{Feb. 2018 - Aug. 2018}
+\begin{itemize}
+  \item Arranged and graded for assignments, answered questions, guided students to learn, hosted regular meetings with students and professor.
+\end{itemize}
+
+
 \section{Publications}
-\datedsubsection{\textbf{Paper Title\cite{zaharia2012resilient}}}{May. 2015}
-An xxx optimized for xxx\cite{verma2015large}
 \begin{itemize}
-  \item main contribution
+  \item Binjie He, Dong Zhang, \textbf{Chang Zhao} (2019). \href{https://academic.oup.com/comjnl/advance-article-abstract/doi/10.1093/comjnl/bxz142/5666159}{Hidden Markov Model-based Load Balancing in Data Center Networks}, The
+  Computer Journal.
+  \item Danhong Zhu, Dong Zhang, Binjie He, \textbf{Chang Zhao}, Xiang Chen (2019). \href{https://ieeexplore.ieee.org/document/8845443}{Design and Implementation of an Experimental Teaching Scheme for the Development of SDN Northbound Applications}, IEEE ICCSE.
+\end{itemize}
+
+\section{Honors and Awards}
+\datedsubsection{National College Students Innovation and Entrepreneurship Project "Development of Network Stream Classification Based on DPDK", excellent grades}{Jun. 2019}
+\datedsubsection{Second-Class Prize of China Collegiate Computing Contest, Network Technology Challenge}{Aug. 2018}
+\datedsubsection{Second-Class Prize of The 4th National University SDN Application Innovation Development Competition}{Aug. 2017}
+\datedsubsection{The Second-Class Fuzhou University Scholarship}{Mar. 2017}
+\datedsubsection{Third-Class Prize of 2016 National English Competition for College Students}{Oct. 2016}
+
+\section{Projects}
+\datedsubsection{Jishi App Project}{Sep. 2018 - Dec. 2019}
+\begin{itemize}
+  \item Software engineering course project in cooperation with 8 classmates.
+  \item A canteen dishes recommendation app for FZU teachers and students, which contains all restaurants in FZU and includes around 1300 dishes. More than 200 users downloaded and used our APP.
+  \item I led a team of 4 classmates and designed and developed the backend system.
+\end{itemize}
+
+\datedsubsection{Optimization on Network Flow Classification based on Intel DPDK}{Apr. 2018 - May. 2019}
+\begin{itemize}
+  \item Used DPDK to implement multi-queue QoS on NIC and optimize the flow classification procedure.
+\end{itemize}
+
+\datedsubsection{Unix/Linux Commands Programming}{Apr 2018 - May 2018} 
+\begin{itemize}
+  \item Implemented a series of Unix/Linux commands, such as more, who, cp, ls, pwd . Also include advanced topics, such as socket programming, HTTP web server and implementing a Shell.
 \end{itemize}
 
 \section{\faCogs\ Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item Programming Languages: C, Python, C++, Javascript, PHP
-  \item Platform: Linux
-  \item Development: Web, xxx
+  \item \textbf{Programming Languages:} experienced in C / C++ / C#, comfortable with Python / Javascript / PHP.
+  \item \textbf{Computer Network:} Famillar with TCP/IP stack, basic SDN concept and configuration, developing under Linux OS.
+  \item \textbf{Front-end and Back-end devlelopment:} Angular, Laravel.
+  \item \textbf{Languages ability:} English(Fluent. TOEFL:101, GRE:319), Mandarin(Native).
 \end{itemize}
-
-\section{\faHeartO\ Honors and Awards}
-\datedline{Third-Class Prize of 2016 National English Competition for College Students}{Oct. 2016}
-\datedline{The Second-Class Fuzhou University Scholarship}{Mar. 2017}
-\datedline{Second-Class Prize of The 4th National University SDN Application Innovation Development Competition}{Aug. 2017}
-\datedline{Second-Class Prize of China Collegiate Computing Contest, Network Technology Challenge}{Aug. 2018}
-\datedline{National College Students Innovation and Entrepreneurship Project "Development of Network Stream Classification Based on DPDK", excellent grades}{Jun. 2019}
 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
-  \item Blog: http://your.blog.me
-  \item GitHub: https://github.com/username
-  \item Languages: English - Fluent, Mandarin - Native speaker
+  \item I am passionate about computer science knowledge and have a strong willingness to self-learning. I learned professional computer science textbooks like \textit{CSAPP, CLRS, TCP/IP Illustrated, Volume 1: The Protocols, APUE} by myself.
+  \item I joined a project that makes captions for the \textit{Introduction to Computer Systems (ICS)} video lessons of CMU (Carnegie Mellon University). I made the Chinese subtitle translation for the class "Memory Hierarchy".
+  \item In my spare time, I like swimming, play Japanese mahjong and Texas Hold'em. I spend a lot of time on reading, writing personal blogs & making friends.
+  \item I am a big fan of classical music. I have heard many recitals and concertos of famous classical orchestra and pianists. I taught myself the piano and played Debussy's Clair de lune(Moonlight) on stage.
 \end{itemize}
 
 %% Reference
