--- a/resume.tex
+++ b/resume.tex
@@ -18,14 +18,14 @@
 \section{Education}
 \datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sep. 2015 - Jun. 2019}
 \begin{itemize}
-  \textit{Bachelor of Engineer} in Computer Science (CS)
+  \item \textit{Bachelor of Engineer} in Computer Science (CS)
   \item GPA : 3.01 / 5 (81.05 / 100) Major GPA: 3.59 / 5 (85.69 / 100)
 \end{itemize}
 
 \datedsubsection{\textbf{University of Washington (UW)}, Tacoma, WA, USA}{Sept. 2020}
 \begin{itemize}
   \item \textit{Master Student}. Anticipated Enrollment Date: Sept. 2020.
-  \item Major: Computer Science & Systems
+  \item Major: Computer Science \& Systems
 \end{itemize}
 
 
@@ -82,19 +82,19 @@
   \item Implemented a series of Unix/Linux commands, such as more, who, cp, ls, pwd . Also include advanced topics, such as socket programming, HTTP web server and implementing a Shell.
 \end{itemize}
 
-\section{\faCogs\ Skills}
+\section{Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{Programming Languages:} experienced in C / C++ / C#, comfortable with Python / Javascript / PHP.
+  \item \textbf{Programming Languages:} experienced in C / C++ / C\#, comfortable with Python / Javascript / PHP.
   \item \textbf{Computer Network:} Famillar with TCP/IP stack, basic SDN concept and configuration, developing under Linux OS.
   \item \textbf{Front-end and Back-end devlelopment:} Angular, Laravel.
   \item \textbf{Languages ability:} English(Fluent. TOEFL:101, GRE:319), Mandarin(Native).
 \end{itemize}
 
-\section{\faInfo\ Miscellaneous}
+\section{Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
   \item I am passionate about computer science knowledge and have a strong willingness to self-learning. I learned professional computer science textbooks like \textit{CSAPP, CLRS, TCP/IP Illustrated, Volume 1: The Protocols, APUE} by myself.
   \item I joined a project that makes captions for the \textit{Introduction to Computer Systems (ICS)} video lessons of CMU (Carnegie Mellon University). I made the Chinese subtitle translation for the class "Memory Hierarchy".
-  \item In my spare time, I like swimming, play Japanese mahjong and Texas Hold'em. I spend a lot of time on reading, writing personal blogs & making friends.
+  \item In my spare time, I like swimming, play Japanese mahjong and Texas Hold'em. I spend a lot of time on reading, writing personal blogs \& making friends.
   \item I am a big fan of classical music. I have heard many recitals and concertos of famous classical orchestra and pianists. I taught myself the piano and played Debussy's Clair de lune(Moonlight) on stage.
 \end{itemize}
 
