update Honors and Awards pattern

--- a/resume.tex
+++ b/resume.tex
@@ -33,14 +33,14 @@
 \datedsubsection{\textbf{Software Development Intern at Microsoft Beijing, Cloud+AI Group}}{Jun. 2019 - Sept. 2019}
 \begin{itemize}
   \item Designed a command line program, Layer 7 Packet Tracer, to locate the IP address of a device that will filter packets at specific application layers.
-  \item Investigated the Protractor, Jasmine, and Selenium tools. Build a framework for the end-to-end front-end testing of the Privacy Review Manager project.
+  \item Investigated the Protractor, Jasmine, and Selenium tools. Built a framework for the end-to-end front-end testing of the Privacy Review Manager project.
   \item Designed a more flexible, configurable, and more versatile front-end progress bar component.
 \end{itemize}
 
 \datedsubsection{\textbf{FZU-SDN Lab Member}}{Mar. 2017 - Nov. 2019}
 \begin{itemize}
   \item As a member of the FZU-SDN Lab (Software-defined Network) under supervision of Prof. Dong Zhang. My research
-  interests include Software-defined Network, network security, programmable data plane and packets processing
+  interests included Software-defined Network, network security, programmable data plane and packets processing
   optimization techniques (major in data plane development kit, DPDK).
 \end{itemize}
 
@@ -52,17 +52,20 @@
 
 \section{Publications}
 \begin{itemize}
-  \item Binjie He, Dong Zhang, \textbf{Chang Zhao} (2019). \href{https://academic.oup.com/comjnl/advance-article-abstract/doi/10.1093/comjnl/bxz142/5666159}{Hidden Markov Model-based Load Balancing in Data Center Networks}, The
+  \item Binjie He, Dong Zhang, \textbf{Chang Zhao} (2019). \href{https://academic.oup.com/comjnl/advance-article-abstract/doi/10.1093/comjnl/bxz142/5666159}{\textit{Hidden Markov Model-based Load Balancing in Data Center Networks}}, The
   Computer Journal.
-  \item Danhong Zhu, Dong Zhang, Binjie He, \textbf{Chang Zhao}, Xiang Chen (2019). \href{https://ieeexplore.ieee.org/document/8845443}{Design and Implementation of an Experimental Teaching Scheme for the Development of SDN Northbound Applications}, IEEE ICCSE.
+  \item Danhong Zhu, Dong Zhang, Binjie He, \textbf{Chang Zhao}, Xiang Chen (2019). \href{https://ieeexplore.ieee.org/document/8845443}{\textit{Design and Implementation of an Experimental Teaching Scheme for the Development of SDN Northbound Applications}}, IEEE ICCSE.
 \end{itemize}
 
 \section{Honors and Awards}
-\datedsubsection{National College Students Innovation and Entrepreneurship Project "Development of Network Stream Classification Based on DPDK", excellent grades}{Jun. 2019}
-\datedsubsection{Second-Class Prize of China Collegiate Computing Contest, Network Technology Challenge}{Aug. 2018}
-\datedsubsection{Second-Class Prize of The 4th National University SDN Application Innovation Development Competition}{Aug. 2017}
-\datedsubsection{The Second-Class Fuzhou University Scholarship}{Mar. 2017}
-\datedsubsection{Third-Class Prize of 2016 National English Competition for College Students}{Oct. 2016}
+\begin{itemize}
+  \item \datedsubsection{National College Students Innovation and Entrepreneurship Project "Development of Network Stream Classification Based on DPDK", excellent grades}{Jun. 2019}
+  \item \datedsubsection{Second-Class Prize of China Collegiate Computing Contest, Network Technology Challenge}{Aug. 2018}
+  \item \datedsubsection{Second-Class Prize of The 4th National University SDN Application Innovation Development Competition}{Aug. 2017}
+  \item \datedsubsection{The Second-Class Fuzhou University Scholarship}{Mar. 2017}
+  \item \datedsubsection{Third-Class Prize of 2016 National English Competition for College Students}{Oct. 2016}
+\end{itemize}
+
 
 \section{Projects}
 \datedsubsection{Jishi App Project}{Sep. 2018 - Dec. 2019}
