--- a/resume.tex
+++ b/resume.tex
@@ -13,7 +13,8 @@
   \email{zhaochang206@gmail.com} \textperiodcentered\ 
   \phone{(+86) 130-0382-8195} \textperiodcentered\ 
   \linkedin[Chang Zhao]{https://www.linkedin.com/in/chang-zhao-chaz/}
-  \github[ZCplayground]{https://github.com/ZCplayground}}
+  \github[ZCplayground]{https://github.com/ZCplayground}
+  \homepage[My cnblogs]{https://www.cnblogs.com/ZCplayground/}}
 
 \section{Education}
 \datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sep. 2015 - Jun. 2019}
@@ -27,7 +28,6 @@
   \item \textit{Master Student}. Anticipated Enrollment Date: Sept. 2020.
   \item Major: Computer Science \& Systems
 \end{itemize}
-
 
 \section{Experience}
 \datedsubsection{\textbf{Software Development Intern at Microsoft Beijing, Cloud+AI Group}}{Jun. 2019 - Sept. 2019}
@@ -49,7 +49,6 @@
   \item Arranged and graded for assignments, answered questions, guided students to learn, hosted regular meetings with students and professor.
 \end{itemize}
 
-
 \section{Publications}
 \begin{itemize}
   \item Binjie He, Dong Zhang, \textbf{Chang Zhao} (2019). \href{https://academic.oup.com/comjnl/advance-article-abstract/doi/10.1093/comjnl/bxz142/5666159}{\textit{Hidden Markov Model-based Load Balancing in Data Center Networks}}, The
@@ -59,13 +58,12 @@
 
 \section{Honors and Awards}
 \begin{itemize}
-  \item \datedsubsection{National College Students Innovation and Entrepreneurship Project "Development of Network Stream Classification Based on DPDK", excellent grades}{Jun. 2019}
+  \item \datedsubsection{National College Students Innovation and Entrepreneurship Project, Development of Network Stream Classification Based on DPDK, excellent grades}{Jun. 2019}
   \item \datedsubsection{Second-Class Prize of China Collegiate Computing Contest, Network Technology Challenge}{Aug. 2018}
   \item \datedsubsection{Second-Class Prize of The 4th National University SDN Application Innovation Development Competition}{Aug. 2017}
   \item \datedsubsection{The Second-Class Fuzhou University Scholarship}{Mar. 2017}
   \item \datedsubsection{Third-Class Prize of 2016 National English Competition for College Students}{Oct. 2016}
 \end{itemize}
-
 
 \section{Projects}
 \datedsubsection{Jishi App Project}{Sep. 2018 - Dec. 2019}
