--- a/resume.tex
+++ b/resume.tex
@@ -58,11 +58,11 @@
 
 \section{Honors and Awards}
 \begin{itemize}
-  \item \datedsubsection{National College Students Innovation and Entrepreneurship Project, Development of Network Stream Classification Based on DPDK, excellent grades}{Jun. 2019}
-  \item \datedsubsection{Second-Class Prize of China Collegiate Computing Contest, Network Technology Challenge}{Aug. 2018}
-  \item \datedsubsection{Second-Class Prize of The 4th National University SDN Application Innovation Development Competition}{Aug. 2017}
-  \item \datedsubsection{The Second-Class Fuzhou University Scholarship}{Mar. 2017}
-  \item \datedsubsection{Third-Class Prize of 2016 National English Competition for College Students}{Oct. 2016}
+  \item National College Students Innovation and Entrepreneurship Project, Development of Network Stream Classification Based on DPDK, excellent grades \rightline{Jun. 2019}
+  \item Second-Class Prize of China Collegiate Computing Contest, Network Technology Challenge \rightline{Aug. 2018}
+  \item Second-Class Prize of The 4th National University SDN Application Innovation Development Competition \rightline{Aug. 2017}
+  \item The Second-Class Fuzhou University Scholarship \rightline{Mar. 2017}
+  \item Third-Class Prize of 2016 National English Competition for College Students \rightline{Oct. 2016}
 \end{itemize}
 
 \section{Projects}
