--- a/resume.tex
+++ b/resume.tex
@@ -58,27 +58,27 @@
 
 \section{Honors and Awards}
 \begin{itemize}
-  \item National College Students Innovation and Entrepreneurship Project, Development of Network Stream Classification Based on DPDK, excellent grades - Jun. 2019
-  \item Second-Class Prize of China Collegiate Computing Contest, Network Technology Challenge - Aug. 2018 
-  \item Second-Class Prize of The 4th National University SDN Application Innovation Development Competition - Aug. 2017
-  \item The Second-Class Fuzhou University Scholarship - Mar. 2017
-  \item Third-Class Prize of 2016 National English Competition for College Students - Oct. 2016
+  \item National College Students Innovation and Entrepreneurship Project, Development of Network Stream Classification Based on DPDK, excellent grades \hfill Jun. 2019
+  \item Second-Class Prize of China Collegiate Computing Contest, Network Technology Challenge \hfill Aug. 2018 
+  \item Second-Class Prize of The 4th National University SDN Application Innovation Development Competition \hfill Aug. 2017
+  \item The Second-Class Fuzhou University Scholarship \hfill Mar. 2017
+  \item Third-Class Prize of 2016 National English Competition for College Students \hfill Oct. 2016
 \end{itemize}
 
 \section{Projects}
-\datedsubsection{\href{https://github.com/jishiDevelopers/jishi-backend}{Jishi App Project}}{Sep. 2018 - Dec. 2019}
+\datedsubsection{\href{https://github.com/jishiDevelopers/jishi-backend}{\textbf{Jishi App Project}}}{Sep. 2018 - Dec. 2019}
 \begin{itemize}
   \item Software engineering course project in cooperation with 8 classmates.
   \item A canteen dishes recommendation app for FZU teachers and students, which contains all restaurants in FZU and includes around 1300 dishes. More than 200 users downloaded and used our APP.
   \item I led a team of 4 classmates and designed and developed the backend system.
 \end{itemize}
 
-\datedsubsection{Optimization on Network Flow Classification based on Intel DPDK}{Apr. 2018 - May. 2019}
+\datedsubsection{\textbf{Optimization on Network Flow Classification based on Intel DPDK}}{Apr. 2018 - May. 2019}
 \begin{itemize}
   \item Used DPDK to implement multi-queue QoS on NIC and optimize the flow classification procedure.
 \end{itemize}
 
-\datedsubsection{\href{https://github.com/ZCplayground/Understanding-Unix-Linux-Programming}{Unix/Linux Commands Programming}}{Apr 2018 - May 2018} 
+\datedsubsection{\href{https://github.com/ZCplayground/Understanding-Unix-Linux-Programming}{\textbf{Unix/Linux Commands Programming}}}{Apr 2018 - May 2018} 
 \begin{itemize}
   \item Implemented a series of Unix/Linux commands, such as more, who, cp, ls, pwd . Also include advanced topics, such as socket programming, HTTP web server and implementing a Shell.
 \end{itemize}
