add new line in awards which are too long

--- a/resume.tex
+++ b/resume.tex
@@ -58,9 +58,9 @@
 
 \section{Honors and Awards}
 \begin{itemize}
-  \item National College Students Innovation and Entrepreneurship Project, Development of Network Stream Classification Based on DPDK, excellent grades \hfill Jun. 2019
-  \item Second-Class Prize of China Collegiate Computing Contest, Network Technology Challenge \hfill Aug. 2018 
-  \item Second-Class Prize of The 4th National University SDN Application Innovation Development Competition \hfill Aug. 2017
+  \item National College Students Innovation and Entrepreneurship Project, Development of \\Network Stream Classification Based on DPDK, excellent grades \hfill Jun. 2019
+  \item Second-Class Prize of China Collegiate Computing Contest, Network Technology \\Challenge Competition \hfill Aug. 2018 
+  \item Second-Class Prize of The 4th National University SDN Application Innovation \\Development Competition \hfill Aug. 2017
   \item The Second-Class Fuzhou University Scholarship \hfill Mar. 2017
   \item Third-Class Prize of 2016 National English Competition for College Students \hfill Oct. 2016
 \end{itemize}
