--- a/resume.tex
+++ b/resume.tex
@@ -17,16 +17,15 @@
   \homepage[My cnblogs]{https://www.cnblogs.com/ZCplayground/}}
 
 \section{Education}
-\datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sep. 2015 - Jun. 2019}
+\datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sept. 2015 - Jun. 2019}
 \begin{itemize}
   \item \textit{Bachelor of Engineer} in Computer Science (CS)
-  \item GPA : 3.01 / 5 (81.05 / 100) Major GPA: 3.59 / 5 (85.69 / 100)
+  \item GPA : 3.01 / 5 (81.05 / 100) Major GPA: 3.59 / 5 (85.69 / 100)t
 \end{itemize}
 
 \datedsubsection{\textbf{University of Washington (UW)}, Tacoma, WA, USA}{Sept. 2020}
 \begin{itemize}
-  \item \textit{Master Student}. Anticipated Enrollment Date: Sept. 2020.
-  \item Major: Computer Science \& Systems
+  \item \textit{Master Student}. Major: Computer Science \& Systems, Anticipated Enrollment Date: Sept. 2020. 
 \end{itemize}
 
 \section{Experience}
@@ -58,7 +57,7 @@
 
 \section{Honors and Awards}
 \begin{itemize}
-  \item National College Students Innovation and Entrepreneurship Project, ``Development \\of Network Stream Classification Based on DPDK'', excellent grades \hfill Jun. 2019
+  \item National College Students Innovation and Entrepreneurship Project, ``Development \\of Network Stream Classification Based on DPDK'', excellent grade \hfill Jun. 2019
   \item Second-Class Prize of China Collegiate Computing Contest, Network Technology \\Challenge Competition \hfill Aug. 2018 
   \item Second-Class Prize of The 4th National University SDN Application Innovation \\Development Competition \hfill Aug. 2017
   \item The Second-Class Fuzhou University Scholarship \hfill Mar. 2017
@@ -66,11 +65,11 @@
 \end{itemize}
 
 \section{Projects}
-\datedsubsection{\href{https://github.com/jishiDevelopers/jishi-backend}{\textbf{Jishi App Project}}}{Sep. 2018 - Dec. 2019}
+\datedsubsection{\href{https://github.com/jishiDevelopers/jishi-backend}{\textbf{Jishi App Project}}}{Sept. 2018 - Dec. 2019}
 \begin{itemize}
   \item Software engineering course project in cooperation with 8 classmates.
   \item A canteen dishes recommendation app for FZU teachers and students, which contains all restaurants in FZU and includes around 1300 dishes. More than 200 users downloaded and used our APP.
-  \item I led a team of 4 classmates and designed and developed the backend system.
+  \item I led a team of 4 classmates, designed and developed the backend system.
 \end{itemize}
 
 \datedsubsection{\textbf{Optimization on Network Flow Classification based on Intel DPDK}}{Apr. 2018 - May. 2019}
@@ -80,7 +79,7 @@
 
 \datedsubsection{\href{https://github.com/ZCplayground/Understanding-Unix-Linux-Programming}{\textbf{Unix/Linux Commands Programming}}}{Apr 2018 - May 2018} 
 \begin{itemize}
-  \item Implemented a series of Unix/Linux commands, such as more, who, cp, ls, pwd . Also include advanced topics, such as socket programming, HTTP web server and implementing a Shell.
+  \item Implemented a series of Unix/Linux commands, such as \textit{more, who, cp, ls, pwd}. This project also includes some advanced topics like socket programming, HTTP web server and implementing a Shell.
 \end{itemize}
 
 \section{Skills}
