--- a/resume.tex
+++ b/resume.tex
@@ -20,10 +20,10 @@
 \datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sept. 2015 - Jun. 2019}
 \begin{itemize}
   \item \textit{Bachelor of Engineer} in Computer Science (CS)
-  \item GPA : 3.01 / 5 (81.05 / 100) Major GPA: 3.59 / 5 (85.69 / 100)t
+  \item GPA : 3.01 / 5 (81.05 / 100), Major GPA: 3.59 / 5 (85.69 / 100)
 \end{itemize}
 
-\datedsubsection{\textbf{University of Washington (UW)}, Tacoma, WA, USA}{Sept. 2020}
+\datedsubsection{\textbf{University of Washington (UW)}, Tacoma, WA, USA}{}
 \begin{itemize}
   \item \textit{Master Student}. Major: Computer Science \& Systems, Anticipated Enrollment Date: Sept. 2020. 
 \end{itemize}
@@ -95,7 +95,7 @@
   \item I am passionate about computer science knowledge and have a strong willingness to self-learning. I learned professional computer science textbooks like \textit{CSAPP, CLRS, TCP/IP Illustrated, Volume 1: The Protocols, APUE} by myself.
   \item I joined a project that makes captions for the \textit{Introduction to Computer Systems (ICS)} video lessons of CMU (Carnegie Mellon University). I made the Chinese subtitle translation for the class "Memory Hierarchy".
   \item In my spare time, I like swimming, play Japanese mahjong and Texas Hold'em. I spend a lot of time on reading, writing personal blogs \& making friends.
-  \item I am a big fan of classical music. I have heard many recitals and concertos of famous classical orchestra and pianists. I taught myself the piano and played Debussy's Clair de lune(Moonlight) on stage.
+  \item I am a big fan of classical music. I have heard many piano concertos and recitals of famous classical orchestra and pianists. I taught myself the piano and played Debussy's Clair de lune(Moonlight) on stage.
 \end{itemize}
 
 %% Reference
