add time info into current master education

--- a/resume.tex
+++ b/resume.tex
@@ -23,7 +23,7 @@
   \item GPA : 3.01 / 5 (81.05 / 100), Major GPA: 3.59 / 5 (85.69 / 100)
 \end{itemize}
 
-\datedsubsection{\textbf{University of Washington (UW)}, Tacoma, WA, USA}{}
+\datedsubsection{\textbf{University of Washington (UW)}, Tacoma, WA, USA}{Present}
 \begin{itemize}
   \item \textit{Master Student}. Major: Computer Science \& Systems, Anticipated Enrollment Date: Sept. 2020. 
 \end{itemize}
