--- a/resume.tex
+++ b/resume.tex
@@ -10,10 +10,10 @@
 \name{Chang Zhao}
 
 \basicInfo{
-  \email{zhaochang206@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 130-0382-8195} \textperiodcentered\ 
-  \linkedin[Chang Zhao]{https://www.linkedin.com/in/chang-zhao-chaz/}
-  \github[ZCplayground]{https://github.com/ZCplayground}
+  \email{zhaochang206@gmail.com}\textperiodcentered\ 
+  \phone{(+86) 130-0382-8195}\textperiodcentered\ 
+  \linkedin[Chang Zhao]{https://www.linkedin.com/in/chang-zhao-chaz/}\textperiodcentered\ 
+  \github[ZCplayground]{https://github.com/ZCplayground}\textperiodcentered\ 
   \homepage[My cnblogs]{https://www.cnblogs.com/ZCplayground/}}
 
 \section{Education}
@@ -32,7 +32,7 @@
 \datedsubsection{\textbf{Software Development Intern at Microsoft Beijing, Cloud+AI Group}}{Jun. 2019 - Sept. 2019}
 \begin{itemize}
   \item Designed a command line program, Layer 7 Packet Tracer, to locate the IP address of a device that will filter packets at specific application layers.
-  \item Investigated the Protractor, Jasmine, and Selenium tools. Built a framework for the end-to-end front-end testing of the Privacy Review Manager project.
+  \item Investigated the Protractor, Jasmine, and Selenium tools. Built a framework for the end-to-end front-end testing of the Privacy Review Manager project. Completed 31 test cases with ~1k lines of code.
   \item Designed a more flexible, configurable, and more versatile front-end progress bar component.
 \end{itemize}
 
@@ -77,7 +77,7 @@
   \item Used DPDK to implement multi-queue QoS on NIC and optimize the flow classification procedure.
 \end{itemize}
 
-\datedsubsection{\href{https://github.com/ZCplayground/Understanding-Unix-Linux-Programming}{\textbf{Unix/Linux Commands Programming}}}{Apr 2018 - May 2018} 
+\datedsubsection{\href{https://github.com/ZCplayground/Understanding-Unix-Linux-Programming}{\textbf{Unix/Linux Commands Programming}}}{Apr. 2018 - May. 2018} 
 \begin{itemize}
   \item Implemented a series of Unix/Linux commands, such as \textit{more, who, cp, ls, pwd}. This project also includes some advanced topics like socket programming, HTTP web server and implementing a Shell.
 \end{itemize}
@@ -93,8 +93,8 @@
 \section{Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
   \item I am passionate about computer science knowledge and have a strong willingness to self-learning. I learned professional computer science textbooks like \textit{CSAPP, CLRS, TCP/IP Illustrated, Volume 1: The Protocols, APUE} by myself.
-  \item I joined a project that makes captions for the \textit{Introduction to Computer Systems (ICS)} video lessons of CMU (Carnegie Mellon University). I made the Chinese subtitle translation for the class "Memory Hierarchy".
-  \item In my spare time, I like swimming, play Japanese mahjong and Texas Hold'em. I spend a lot of time on reading, writing personal blogs \& making friends.
+  \item I joined a \href{https://github.com/EugeneLiu/translationCSAPP/commit/b90a9547a259420e0c21fa4ca73ca1e1619deb63}{project} that makes captions for the \textit{Introduction to Computer Systems (ICS)} video lessons of CMU (Carnegie Mellon University). \href{https://www.bilibili.com/video/BV1iW411d7hd?p=11}{I made the Chinese subtitle translation for the class "Memory Hierarchy".}
+  \item In my spare time, I like swimming, play Japanese mahjong and Texas Hold'em. I spend a lot of time on reading books about Humanities and Social Sciences, writing personal blogs \& making friends.
   \item I am a big fan of classical music. I have heard many piano concertos and recitals of famous classical orchestra and pianists. I taught myself the piano and played Debussy's Clair de lune(Moonlight) on stage.
 \end{itemize}
 
