--- a/resume.tex
+++ b/resume.tex
@@ -17,15 +17,10 @@
   \homepage[My cnblogs]{https://www.cnblogs.com/ZCplayground/}}
 
 \section{Education}
-\datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sept. 2015 - Jun. 2019}
+\datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sept. 2015 - Jun. 2020}
 \begin{itemize}
   \item \textit{Bachelor of Engineer} in Computer Science (CS)
   \item GPA : 3.01 / 5 (81.05 / 100), Major GPA: 3.59 / 5 (85.69 / 100)
-\end{itemize}
-
-\datedsubsection{\textbf{University of Washington (UW)}, Tacoma, WA, USA}{Present}
-\begin{itemize}
-  \item \textit{Master Student}. Major: Computer Science \& Systems, Anticipated Enrollment Date: Sept. 2020. 
 \end{itemize}
 
 \section{Experience}
@@ -94,7 +89,7 @@
 \begin{itemize}[parsep=0.5ex]
   \item I am passionate about computer science knowledge and have a strong willingness to self-learning. I learned professional computer science textbooks like \textit{CSAPP, CLRS, TCP/IP Illustrated, Volume 1: The Protocols, APUE} by myself.
   \item I joined a \href{https://github.com/EugeneLiu/translationCSAPP/commit/b90a9547a259420e0c21fa4ca73ca1e1619deb63}{project} that makes captions for the \textit{Introduction to Computer Systems (ICS)} video lessons of CMU (Carnegie Mellon University). \href{https://www.bilibili.com/video/BV1iW411d7hd?p=11}{I made the Chinese subtitle translation for the class "Memory Hierarchy".}
-  \item In my spare time, I like swimming, play Japanese mahjong and Texas Hold'em. I spend a lot of time on reading books about Humanities and Social Sciences, writing personal blogs \& making friends.
+  \item In my spare time, I like swimming, play Japanese mahjong and Texas Hold'em. I spend a lot of time on reading books, writing personal blogs \& making friends.
   \item I am a big fan of classical music. I have heard many piano concertos and recitals of famous classical orchestra and pianists. I taught myself the piano and played Debussy's Clair de lune(Moonlight) on stage.
 \end{itemize}
 
