--- a/resume.tex
+++ b/resume.tex
@@ -14,17 +14,32 @@
   \phone{(+86) 130-0382-8195}\textperiodcentered\ 
   \linkedin[Chang Zhao]{https://www.linkedin.com/in/chang-zhao-chaz/}\textperiodcentered\ 
   \github[ZCplayground]{https://github.com/ZCplayground}\textperiodcentered\ 
-  \homepage[My cnblogs]{https://www.cnblogs.com/ZCplayground/}}
 
-\section{Education}
-\datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sept. 2015 - Jun. 2020}
-\begin{itemize}
-  \item \textit{Bachelor of Engineer} in Computer Science (CS)
-  \item GPA : 3.01 / 5 (81.05 / 100), Major GPA: 3.59 / 5 (85.69 / 100)
+\section{Skills}
+\begin{itemize}[parsep=0.5ex]
+  \item \textbf{Languages:} C\#, Python, TypeScript JavaScript, PHP.
+  \item \textbf{Tools:} Azure Cosmos DB, SQL Server, 
+  \item \textbf{Front-end and Back-end devlelopment:} Angular, React, Laravel.
+  \item \textbf{Languages ability:} English(Fluent), Mandarin(Native).
 \end{itemize}
 
 \section{Experience}
-\datedsubsection{\textbf{Software Development Intern at Microsoft Beijing, Cloud+AI Group}}{Jun. 2019 - Sept. 2019}
+\datedsubsection{\textbf{Software Development Engineer, Microsoft Suzhou, Viva Topics team}}{Oct. 2022 - Present}
+\begin{itemize}
+  \item 
+  \item 
+  \item 
+\end{itemize}
+
+\datedsubsection{\textbf{Software Development Engineer, Microsoft Suzhou, SharePoint Server team}}{Mar. 2021 - Oct. 2022}
+\begin{itemize}
+  \item Developed PowerShell scripts to automate scanning and collection of DLL references, ensuring adherence to standard practices in packaging and uploading to NuGet. Significantly reducing DLL dependencies from 1200+ to 270 DLLs. 
+  \item Refactored and migrated over 100 projects from old codebase to new project in Office Engineering System, resulting in a more consistent developer experience and increased efficiency. 
+  \item Played a key role in the refactor of Workflow Manager and Service Bus, leading to the successful launch of SharePoint Workflow Manager (SPWFM). 
+  \item Fixed security vulnerabilities by resolving CredScan bugs, OACR errors, and contributed new features to SPWFM. Additionally, facilitated SharePoint test v-team in setting up Workflow Manager farm and services, ensuring smooth testing processes and preventing regressions.
+\end{itemize}
+
+\datedsubsection{\textbf{Software Development Intern, Microsoft Beijing, Cloud+AI Group}}{Jun. 2019 - Sept. 2019}
 \begin{itemize}
   \item Designed a command line program, Layer 7 Packet Tracer, to locate the IP address of a device that will filter packets at specific application layers.
   \item Investigated the Protractor, Jasmine, and Selenium tools. Built a framework for the end-to-end front-end testing of the Privacy Review Manager project. Completed 31 test cases with ~1k lines of code.
@@ -77,20 +92,10 @@
   \item Implemented a series of Unix/Linux commands, such as \textit{more, who, cp, ls, pwd}. This project also includes some advanced topics like socket programming, HTTP web server and implementing a Shell.
 \end{itemize}
 
-\section{Skills}
-\begin{itemize}[parsep=0.5ex]
-  \item \textbf{Programming Languages:} experienced in C / C++ / C\#, comfortable with Python / Javascript / PHP.
-  \item \textbf{Computer Network:} Famillar with TCP/IP stack, basic SDN concept and configuration, developing under Linux OS.
-  \item \textbf{Front-end and Back-end devlelopment:} Angular, Laravel.
-  \item \textbf{Languages ability:} English(Fluent. TOEFL:101, GRE:319), Mandarin(Native).
-\end{itemize}
-
-\section{Miscellaneous}
-\begin{itemize}[parsep=0.5ex]
-  \item I am passionate about computer science knowledge and have a strong willingness to self-learning. I learned professional computer science textbooks like \textit{CSAPP, CLRS, TCP/IP Illustrated, Volume 1: The Protocols, APUE} by myself.
-  \item I joined a \href{https://github.com/EugeneLiu/translationCSAPP/commit/b90a9547a259420e0c21fa4ca73ca1e1619deb63}{project} that makes captions for the \textit{Introduction to Computer Systems (ICS)} video lessons of CMU (Carnegie Mellon University). \href{https://www.bilibili.com/video/BV1iW411d7hd?p=11}{I made the Chinese subtitle translation for the class "Memory Hierarchy".}
-  \item In my spare time, I like swimming, playing Japanese Mahjong and Texas Hold'em. I spend a lot of time on reading books, writing personal blogs and making friends.
-  \item I am a big fan of classical music. I have heard many piano concertos and recitals of famous classical orchestra and pianists. I taught myself the piano and played Debussy's Clair de lune(Moonlight) on stage.
+\section{Education}
+\datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sept. 2015 - Jun. 2020}
+\begin{itemize}
+  \item \textit{Bachelor of Engineer} in Computer Science (CS)
 \end{itemize}
 
 %% Reference
