--- a/resume.tex
+++ b/resume.tex
@@ -16,23 +16,26 @@
   \github[ZCplayground]{https://github.com/ZCplayground}\textperiodcentered\ }
   
 \section{Experience}
-\datedsubsection{\textbf{Software Development Intern at Microsoft Beijing, Cloud+AI Group}}{Jun. 2019 - Sept. 2019}
+\datedsubsection{\textbf{Software Development Engineer, Microsoft Suzhou, Viva Topics team}}{Oct. 2022 - Present}
+\begin{itemize}
+  \item 
+  \item 
+  \item 
+\end{itemize}
+
+\datedsubsection{\textbf{Software Development Engineer, Microsoft Suzhou, SharePoint Server team}}{Mar. 2021 - Oct. 2022}
+\begin{itemize}
+  \item Developed PowerShell scripts to automate scanning and collection of DLL references, ensuring adherence to standard practices in packaging and uploading to NuGet. Significantly reducing DLL dependencies from 1200+ to 270 DLLs. 
+  \item Refactored and migrated over 100 projects from old codebase to new project in Office Engineering System, resulting in a more consistent developer experience and increased efficiency. 
+  \item Played a key role in the refactor of Workflow Manager and Service Bus, leading to the successful launch of SharePoint Workflow Manager (SPWFM). 
+  \item Fixed security vulnerabilities by resolving CredScan bugs, OACR errors, and contributed new features to SPWFM. Additionally, facilitated SharePoint test v-team in setting up Workflow Manager farm and services, ensuring smooth testing processes and preventing regressions.
+\end{itemize}
+
+\datedsubsection{\textbf{Software Development Intern, Microsoft Beijing, Cloud+AI Group}}{Jun. 2019 - Sept. 2019}
 \begin{itemize}
   \item Designed a command line program, Layer 7 Packet Tracer, to locate the IP address of a device that will filter packets at specific application layers.
   \item Investigated the Protractor, Jasmine, and Selenium tools. Built a framework for the end-to-end front-end testing of the Privacy Review Manager project. Completed 31 test cases with ~1k lines of code.
   \item Designed a more flexible, configurable, and more versatile front-end progress bar component.
-\end{itemize}
-
-\datedsubsection{\textbf{FZU-SDN Lab Member}}{Mar. 2017 - Nov. 2019}
-\begin{itemize}
-  \item As a member of the FZU-SDN Lab (Software-defined Network) under supervision of Prof. Dong Zhang. My research
-  interests included Software-defined Network, network security, programmable data plane and packets processing
-  optimization techniques (major in data plane development kit, DPDK).
-\end{itemize}
-
-\datedsubsection{\textbf{Teaching Assistant - C++ Object-oriented Programming Course}}{Feb. 2018 - Aug. 2018}
-\begin{itemize}
-  \item Arranged and graded for assignments, answered questions, guided students to learn, hosted regular meetings with students and professor.
 \end{itemize}
 
 \section{Publications}
