--- a/resume.tex
+++ b/resume.tex
@@ -23,12 +23,14 @@
   \item 
 \end{itemize}
 
-\datedsubsection{\textbf{Software Development Engineer, Microsoft Suzhou, SharePoint Server team}}{Mar. 2021 - Oct. 2022}
+\datedsubsection{\textbf{Microsoft Suzhou, SharePoint Server team}}{Mar. 2021 - Oct. 2022}
+\Software Development Engineer \\
 \begin{itemize}
-  \item Developed PowerShell scripts to automate scanning and collection of DLL references, ensuring adherence to standard practices in packaging and uploading to NuGet. Significantly reducing DLL dependencies from 1200+ to 270 DLLs. 
-  \item Refactored and migrated over 100 projects from old codebase to new project in Office Engineering System, resulting in a more consistent developer experience and increased efficiency. 
+  \item Refactored and migrated over 100 projects from old codebase to new project in Office Engineering System.
+  \item Ensured packages were properly packed and uploaded to NuGet following standard procedures, resulting in a more consistent developer experience and increased efficiency. 
+  \item Developed PowerShell scripts to scan and deduplicate DLL references. Significantly reducing DLL dependencies from 1200+ to 270 DLLs. 
   \item Played a key role in the refactor of Workflow Manager and Service Bus, leading to the successful launch of SharePoint Workflow Manager (SPWFM). 
-  \item Fixed security vulnerabilities by resolving CredScan bugs, OACR errors, and contributed new features to SPWFM. Additionally, facilitated SharePoint test v-team in setting up Workflow Manager farm and services, ensuring smooth testing processes and preventing regressions.
+  \item Fixed security vulnerabilities by resolving CredScan bugs, OACR errors, and contributed new features to SPWFM. 
 \end{itemize}
 
 \datedsubsection{\textbf{Software Development Intern, Microsoft Beijing, Cloud+AI Group}}{Jun. 2019 - Sept. 2019}
