--- a/resume.tex
+++ b/resume.tex
@@ -24,7 +24,7 @@
 \end{itemize}
 
 \datedsubsection{\textbf{Microsoft Suzhou, SharePoint Server team}}{Mar. 2021 - Oct. 2022}
-\Software Development Engineer \\
+Software Development Engineer \\
 \begin{itemize}
   \item Refactored and migrated over 100 projects from old codebase to new project in Office Engineering System.
   \item Ensured packages were properly packed and uploaded to NuGet following standard procedures, resulting in a more consistent developer experience and increased efficiency. 
