--- a/resume.tex
+++ b/resume.tex
@@ -16,15 +16,16 @@
   \github[ZCplayground]{https://github.com/ZCplayground}\textperiodcentered\ }
   
 \section{Experience}
-\datedsubsection{\textbf{Software Development Engineer, Microsoft Suzhou, Viva Topics team}}{Oct. 2022 - Present}
+\datedsubsection{\textbf{Software Development Engineer}}{Oct. 2022 - Present}
+\textbf{Microsoft Suzhou, Viva Topics team, E+D}
 \begin{itemize}
   \item 
   \item 
   \item 
 \end{itemize}
 
-\datedsubsection{\textbf{Microsoft Suzhou, SharePoint Server team}}{Mar. 2021 - Oct. 2022}
-Software Development Engineer \\
+\datedsubsection{\textbf{Software Development Engineer}}{Mar. 2021 - Oct. 2022}
+\textbf{Microsoft Suzhou, SharePoint Server Team, E+D}
 \begin{itemize}
   \item Refactored and migrated over 100 projects from old codebase to new project in Office Engineering System.
   \item Ensured packages were properly packed and uploaded to NuGet following standard procedures, resulting in a more consistent developer experience and increased efficiency. 
