--- a/resume.tex
+++ b/resume.tex
@@ -16,16 +16,17 @@
   \github[ZCplayground]{https://github.com/ZCplayground}\textperiodcentered\ }
   
 \section{Experience}
-\datedsubsection{\textbf{Software Development Engineer}}{Oct. 2022 - Present}
-\textbf{Microsoft Suzhou, Viva Topics team, E+D}
+\datedsubsection{\textbf{Microsoft Suzhou, Software Development Engineer}}{Mar. 2021 - Present}
+\textbf{Viva Topics Notification Feature Development}
 \begin{itemize}
-  \item 
-  \item 
-  \item 
+  \item Engaged in cross-functional collaboration with product managers, developers, and designers to implement Viva Topics Notification feature including email and Teams Bot notifications. 
+  \item Implemented Azure Bot Service prototype utilizing Bot Framework, facilitating user engagement and enhancing premium plan conversion rates.
+  \item Orchestrated localization support, expanding user base beyond English-speaking markets.
+  \item Prototyped new notification messages, receiving positive feedback and recognition from partner team for innovative features.
+  \item Conducted systems maintenance and issue management, resolving critical issues and ensuring seamless service operation.
 \end{itemize}
 
-\datedsubsection{\textbf{Software Development Engineer}}{Mar. 2021 - Oct. 2022}
-\textbf{Microsoft Suzhou, SharePoint Server Team, E+D}
+\textbf{Workflow Manager (WFM) System Migration and Refactoring}
 \begin{itemize}
   \item Refactored and migrated over 100 projects from old codebase to new project in Office Engineering System.
   \item Ensured packages were properly packed and uploaded to NuGet following standard procedures, resulting in a more consistent developer experience and increased efficiency. 
@@ -34,7 +35,8 @@
   \item Fixed security vulnerabilities by resolving CredScan bugs, OACR errors, and contributed new features to SPWFM. 
 \end{itemize}
 
-\datedsubsection{\textbf{Software Development Intern, Microsoft Beijing, Cloud+AI Group}}{Jun. 2019 - Sept. 2019}
+\datedsubsection{\textbf{Microsoft Beijing, Software Development Intern}}{Jun. 2019 - Sept. 2019}
+\textbf{Privacy Manager team, Cloud+AI Group}
 \begin{itemize}
   \item Designed a command line program, Layer 7 Packet Tracer, to locate the IP address of a device that will filter packets at specific application layers.
   \item Investigated the Protractor, Jasmine, and Selenium tools. Built a framework for the end-to-end front-end testing of the Privacy Review Manager project. Completed 31 test cases with ~1k lines of code.
